# app/static/swagger.json
@@ -9,22 +9,6 @@
       "type": "object",
       "title": "Base User Preferences",
       "properties": {
-        "scenario_preference": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "number",
-            "minimum": 1,
-            "maximum": 10,
-            "default": 5
-          },
-          "description": "A dictionary containing ratings in the (inclusive) range from 1 to 10 for each category",
-          "default": {
-            "Energie": 5,
-            "Komfort": 5,
-            "Gesundheit": 5,
-            "Sicherheit": 5
-          }
-        },
         "product_preference": {
           "type": "string",
           "enum": ["Preis", "Efficiency", "Extendability"],
@@ -35,26 +19,9 @@
           "type": "boolean",
           "default": true,
           "description": "True if the user is fine with products that require destructive installation procedures"
-        },
-        "product_type_filter": {
-          "type": "array",
-          "description": "A set of product type ids that should be used to filter the suggested scenarios",
-          "items": {
-            "type": "number"
-          },
-          "default": []
-        },
-        "subcategory_filter": {
-          "type": "array",
-          "description": "A set of subcategory ids that should be used to filter the suggested scenarios",
-          "items": {
-            "type": "number"
-          },
-          "default": []
         }
       },
       "required": [
-        "scenario_preference",
         "product_preference",
         "renovation_preference"
       ]
@@ -82,6 +49,38 @@
     "suggestions_input": {
       "allOf": [{ "$ref": "#/definitions/matching_input_base" }],
       "properties": {
+        "scenario_preference": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "number",
+            "minimum": 1,
+            "maximum": 10,
+            "default": 5
+          },
+          "description": "A dictionary containing ratings in the (inclusive) range from 1 to 10 for each category",
+          "default": {
+            "Energie": 5,
+            "Komfort": 5,
+            "Gesundheit": 5,
+            "Sicherheit": 5
+          }
+        },
+        "product_type_filter": {
+          "type": "array",
+          "description": "A set of product type ids that should be used to filter the suggested scenarios",
+          "items": {
+            "type": "number"
+          },
+          "default": []
+        },
+        "subcategory_filter": {
+          "type": "array",
+          "description": "A set of subcategory ids that should be used to filter the suggested scenarios",
+          "items": {
+            "type": "number"
+          },
+          "default": []
+        },
         "shopping_basket": {
           "type": "array",
           "description": "A set of objects representing required meta information about the scenarios in the shopping basket",
